# CG

./: CMakeLists.txt
include/glad/: glad.h
src/: Shader.h  camera.h  drawcalls.h  fs.glsl  glad.c  main.cpp  mesh.h  model.h  stb_helper.cpp  vs.glsl
src/model/anno/: ano.mtl
src/shader/: 6_cubemap_fs.glsl  6_cubemap_vs.glsl  6_skybox_vs.glsl
src/shader/cube/: cube_fs.glsl  cube_vs.glsl
src/shader/lighting/: 1.advancing_lighting_fs.glsl
src/shader/object/: normal_vs.glsl
src/shader/plane/: plane_fs.glsl  plane_vs.glsl
src/shader/quad/: quad_fs.glsl  quad_vs.glsl
src/shader/shadow/: shadow_mapping_depth_fs.glsl  shadow_mapping_depth_vs.glsl  shadow_mapping_fs.glsl  shadow_mapping_vs.glsl
